[gd_scene load_steps=3 format=3 uid="uid://b05qs54h33o2m"]

[ext_resource type="Script" uid="uid://dtvo13dk27xnb" path="res://addons/metadata_templates/scripts/template_preview_dialog.gd" id="1_qw0bx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kdtmn"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.176471, 0.211765, 0.254902, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.301961, 0.337255, 0.4, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="TemplatePreviewDialog" type="Window"]
initial_position = 1
size = Vector2i(800, 500)
transient = true
exclusive = false
min_size = Vector2i(600, 400)
script = ExtResource("1_qw0bx")

[node name="HSplitContainer" type="HSplitContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
split_offset = 250

[node name="LeftPanel" type="PanelContainer" parent="HSplitContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_kdtmn")

[node name="NodeList" type="Tree" parent="HSplitContainer/LeftPanel"]
layout_mode = 2
columns = 2
select_mode = 1
scroll_horizontal_enabled = false

[node name="RightPanel" type="PanelContainer" parent="HSplitContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_kdtmn")

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer/RightPanel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TemplateNameLabel" type="Label" parent="HSplitContainer/RightPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Select a node from the list"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="HSplitContainer/RightPanel/VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="HSplitContainer/RightPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MetadataContainer" type="VBoxContainer" parent="HSplitContainer/RightPanel/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="ActionsContainer" type="HBoxContainer" parent="HSplitContainer/RightPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="SaveChangesButton" type="Button" parent="HSplitContainer/RightPanel/VBoxContainer/ActionsContainer"]
layout_mode = 2
text = "Save Changes"

[node name="ChangeTemplateButton" type="Button" parent="HSplitContainer/RightPanel/VBoxContainer/ActionsContainer"]
layout_mode = 2
text = "Change Template"

[node name="RemoveTemplateButton" type="Button" parent="HSplitContainer/RightPanel/VBoxContainer/ActionsContainer"]
layout_mode = 2
text = "Remove Template"

[node name="CloseButton" type="Button" parent="HSplitContainer/RightPanel/VBoxContainer/ActionsContainer"]
layout_mode = 2
text = "Close"
